Add pokemon player and delete pokemon id
