# src/routes/router.ts
@@ -12,7 +12,4 @@ router.get('/pokemon/enemigos', logger.logRequest(), PokemonController.getPokemo
 router.get('/pokemon/info', logger.logRequest(), PokemonController.getPokemonInfo);
 
 router.post('/pokemon/atacar', logger.logRequest(), PokemonController.sendPokemonAttack);
-router.post('/pokemon/iniciar-turno', logger.logRequest(), PokemonController.initializeTurn);
-router.post('/pokemon/editar-vida', logger.logRequest(), PokemonController.editPokemonLife);
-router.post('/pokemon/terminar-partida', logger.logRequest(), PokemonController.finishBattle);
 router.post('/pokemon/unirse-a-partida', logger.logRequest(), PokemonController.addToBattle);
