# src/routes/swagger.json
@@ -347,214 +347,6 @@
         }
       }
     },
-    "/pokemon/iniciar-turno": {
-      "post": {
-        "tags": [
-          "Battle"
-        ],
-        "summary": "Prepare a Pokemon to attack",
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "success"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Turn initialized successfully."
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error response when the Pokemon status is not 'en-batalla'",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "array",
-                  "example": "Error initializing turn. Pokemon is: disponible"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Internal server error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pokemon/editar-vida": {
-      "post": {
-        "tags": [
-          "Battle"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Pokemon new Life",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "life": {
-                  "type": "integer",
-                  "example": 1
-                }
-              }
-            }
-          }
-        ],
-        "summary": "Change Pokemon Life",
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "success"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Pokemon life has been modified."
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error response when the life is not sent",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "array",
-                  "example": "life is a required field"
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Internal server error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/pokemon/terminar-partida": {
-      "post": {
-        "tags": [
-          "Battle"
-        ],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "Pokemon result",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "victory": {
-                  "type": "boolean",
-                  "example": true
-                }
-              }
-            }
-          }
-        ],
-        "summary": "Finish Pokemon battle",
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "success"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Pokemon has been reset."
-                }
-              }
-            }
-          },
-          "400": {
-            "description": "Error response when the Pokemon status is not 'en-batalla'",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "array",
-                  "example": "Error resting Pokemon."
-                }
-              }
-            }
-          },
-          "500": {
-            "description": "Internal server error",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "status": {
-                  "type": "string",
-                  "example": "error"
-                },
-                "message": {
-                  "type": "string",
-                  "example": "Internal server error"
-                }
-              }
-            }
-          }
-        }
-      }
-    },
     "/pokemon/unirse-a-partida": {
       "post": {
         "tags": [
